--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,10 @@
     border-radius: 5px;
     color: grey;
 }
+.list a {
+    text-decoration: none;
+    color: white;
+}
+.list li {
+    list-style: none;
+}
