--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     background-color: #3A546D;
 }
 .title-section {
-    margin-top: 55px;
+    margin-top: 73px;
 }
 .hamburger-border {
     border: 2px solid grey;
@@ -23,4 +23,18 @@
 }
 .list li {
     list-style: none;
+}
+.avatar {
+    max-width: 280px;
+    aspect-ratio: 1/1;
+}
+.title {
+    transform: scale(1.3);
+}
+.line {
+    height: 5px;
+    width: 80px;
+    border-radius: 10px;
+    background-color: white;
+    align-self: center;
 }
