--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,10 @@
     border-radius: 5px;
     color: grey;
 }
-.list a {
+.list-unstyled a {
     text-decoration: none;
     color: white;
     margin-right: 15px;
-}
-.list li {
-    list-style: none;
 }
 .avatar {
     max-width: 270px;
