--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,10 @@
 .card-style {
     padding-bottom: 20px;
     border: none;
+    transition: transform 2s;
 }
-.line-small {
-    width: 40px;
+.card-style:hover {
+    transform: rotatex(360deg) scale(1.1);
 }
 .form-control, textarea {
     border-top: 0;
@@ -40,7 +41,7 @@
     border-right: 0;
 }
 
-.form-control:focus, textarea:focus{
+.form-control:focus, textarea:focus, .btn_primary:focus{
     border-color: var(--bs-primary);
     box-shadow: 0 0 0 0.25rem rgba(var(--bs-primary-rgb), 0.25);
 }
@@ -57,6 +58,7 @@ textarea:focus-visible {
 .btn_primary {
     background-color: var(--bs-primary);
     color: white;
+    transition: background-color 0.4s;
 }
 .btn_primary:hover {
     background-color: #109b7f;
@@ -70,6 +72,13 @@ textarea:focus-visible {
     aspect-ratio: 1/1;
     margin: 0 5px;
     line-height: 36px;
+    transition: background-color 0.4s;
+}
+.board:hover .fa-brands {
+    transform: scale(1.2);
+}
+.fa-brands {
+    transition: transform 0.4s;
 }
 .board:first-child:hover {
     background-color: #2763B0;
@@ -82,6 +91,10 @@ textarea:focus-visible {
 }
 .board:last-child:hover {
     background-color: #0A66C2;
+}
+.header a:hover, .x:hover {
+    text-decoration: underline;
+    opacity: 0.5;
 }
 
 
